# PACE

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  PACE Dev Plan.md  PACE PRD.md  PACE Plugin Conversion Brief.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
plugin/: .mcp.json  LICENSE  README.md
plugin/.claude-plugin/: plugin.json
plugin/commands/: pace-setup.md
plugin/skills/pace-memory/: SKILL.md
plugin/skills/pace-memory/references/: onboarding.md
plugin/system-prompts/: compact.md  heartbeat.md  review.md
scripts/: build_plugin.py
src/pace/: __init__.py  capture.py  cli.py  compact.py  config.py  doctor.py  entries.py  followups.py  frontmatter.py  heartbeat.py  index.py  io.py  lockfile.py  mcp_server.py  onboarding.py  paths.py  projects.py  review.py  settings.py  vault.py  wikilinks.py
tests/: conftest.py  test_archive_cli.py  test_capture_and_search.py  test_cli.py  test_cli_project.py  test_compact.py  test_config.py  test_doctor.py  test_entries.py  test_followups.py  test_frontmatter.py  test_heartbeat.py  test_lockfile.py  test_mcp_protocol.py  test_mcp_tools.py  test_onboarding.py  test_paths.py  test_plugin_build.py  test_plugin_package.py  test_project_capture.py  test_project_rename.py  test_projects.py  test_reindex.py  test_review.py  test_settings.py  test_smoke.py  test_vault_init.py  test_wikilinks.py
