[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pace-memory"
version = "0.1.0"
description = "PACE — Persistent AI Context Engine. A local Markdown memory system for Claude Cowork."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Justin Gesso" },
]
keywords = ["claude", "cowork", "memory", "obsidian", "mcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
    "click>=8.1",
    "mcp>=1.0",
    "pyyaml>=6.0",
    "portalocker>=2.8",
    "python-dateutil>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[project.scripts]
pace = "pace.cli:main"
pace-mcp = "pace.mcp_server:main"

[project.urls]
Homepage = "https://github.com/justingesso/pace"

[tool.hatch.build.targets.wheel]
packages = ["src/pace"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
